@@ -4,6 +4,9 @@ Cobbler CHANGELOG
 * Thu Nov 15 2007 - 0.7.0
 - Testing branch
 - Fix bug related to <<inherit>> and kickstart args 
+- Make CLI functions modular and use optparse
+- Quote wget args to avoid creating stray files on target system
+- Support Xen FV as virt type (requires F8+)
 - ...
 
 * Wed Nov 14 2007 - 0.6.4
